# physical-ai-project

./: .gitignore  README.MD  __main__.py  pyproject.toml
lib/: __init__.py
lib/device/: __init__.py  tot.py
lib/device_libs/: __init__.py  tot.py
lib/math/: __init__.py
lib/math_libs/: __init__.py
tests/week3/: test_transform.py
week1/: README.MD  main.py
week2/: README.MD  main.py
week2/documents/: summary.md
week3/: README.MD  main.py  transform.py
week3/document/: summary.md
week4/: README.md  main.py  transform.py
